force-app/main/default/objects/SFSSDupeCatcher__Scenario_Rule__c/fields/SFSSDupeCatcher__First_N_Letters__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__First_N_Letters__c</fullName>
    <description>The number of initial letters or words you would like to match in the chosen field(s).</description>
    <inlineHelpText>The number of initial letters or words you would like to match in the chosen field(s).</inlineHelpText>
    <label>First N</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>