force-app/main/default/objects/SFSSDupeCatcher__Scenario_Rule__c/fields/SFSSDupeCatcher__Fuzzy_Match__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Fuzzy_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fuzzy Match</label>
    <type>Checkbox</type>
</CustomField>