force-app/main/default/objects/SFSSDupeCatcher__Scenario_Rule__c/fields/SFSSDupeCatcher__Mapping_Approach__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Mapping_Approach__c</fullName>
    <description>&quot;Exact&quot; exact field value match.
&quot;Domain&quot;  match domain part of a field.
&quot;First N Letters&quot; match first N characters.
&quot;Numeric Only&quot; strictly numeric characters.
&quot;First 5 Zip&quot; match first 5 digits of Zip.
&quot;Relaxed NA Phone&quot; match last 7 digits only.</description>
    <inlineHelpText>Indicates the type of matching that will be used on the chosen field(s).</inlineHelpText>
    <label>Matching Technique</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SFSSDupeCatcher__Match_field__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Exact</fullName>
                <default>true</default>
                <label>Exact</label>
            </value>
            <value>
                <fullName>Domain</fullName>
            </value>
            <value>
                <fullName>First N Letters</fullName>
            </value>
            <value>
                <fullName>Numeric Only</fullName>
            </value>
            <value>
                <fullName>Relaxed NA Phone</fullName>
            </value>
            <value>
                <fullName>First 5 Zip</fullName>
            </value>
            <value>
                <fullName>First Name</fullName>
            </value>
            <value>
                <fullName>Clean Name</fullName>
            </value>
            <value>
                <fullName>Country Match</fullName>
            </value>
            <value>
                <fullName>Street Address Match</fullName>
            </value>
            <value>
                <fullName>First N Words</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>