force-app/main/default/objects/SFSSDupeCatcher__Scenario_Rule__c/fields/SFSSDupeCatcher__Match_Blanks__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Match_Blanks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activates matching on blank fields.</description>
    <inlineHelpText>If checked, DupeCatcher will match fields left blank.</inlineHelpText>
    <label>Match Blanks</label>
    <type>Checkbox</type>
</CustomField>