force-app/main/default/objects/SFSSDupeCatcher__Scenario_Rule__c/fields/SFSSDupeCatcher__Scenario__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Scenario__c</fullName>
    <description>The parent filter for this rule.</description>
    <inlineHelpText>The filter under which this rule has been created.</inlineHelpText>
    <label>Filter</label>
    <referenceTo>SFSSDupeCatcher__Scenario__c</referenceTo>
    <relationshipLabel>DupeCatcher Filter Rules</relationshipLabel>
    <relationshipName>Scenario_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>