force-app/main/default/objects/SFSSDupeCatcher__Scenario_Rule__c/fields/SFSSDupeCatcher__Scenario_Formula__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Scenario_Formula__c</fullName>
    <formula>SFSSDupeCatcher__Scenario__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filter</label>
    <type>Text</type>
</CustomField>