force-app/main/default/objects/SFSSDupeCatcher__Scenario_Rule__c/fields/SFSSDupeCatcher__Scenario_Type__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Scenario_Type__c</fullName>
    <description>The Filter Type of the parent filter</description>
    <inlineHelpText>Read only field that shows the Filter Type of the parent filter for this rule.</inlineHelpText>
    <label>Filter Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead to Contact</fullName>
            </value>
            <value>
                <fullName>Lead to Account</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
                <default>true</default>
                <label>Lead</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Account (Person)</fullName>
            </value>
            <value>
                <fullName>Lead to Account (Person)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>