force-app/main/default/objects/SFSSDupeCatcher__Scenario_Rule__c/fields/SFSSDupeCatcher__Scenario_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Scenario_Type_Formula__c</fullName>
    <formula>TEXT(SFSSDupeCatcher__Scenario__r.SFSSDupeCatcher__Scenario_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filter Type - From Filter</label>
    <type>Text</type>
</CustomField>