force-app/main/default/objects/SFSSDupeCatcher__Scenario_Rule__c/fields/SFSSDupeCatcher__Target_Match_Field__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Target_Match_Field__c</fullName>
    <description>The Contact or Account field  that you would like this rule to use for matching against potential duplicates.  This field is only valid if the filter type is &quot;Lead to Contact&quot; and &quot;Lead to Account&quot;.</description>
    <inlineHelpText>The field used by the rule to identify duplicates for Lead to Account or Lead to Contact scenarios.</inlineHelpText>
    <label>Target Field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SFSSDupeCatcher__Scenario_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>First Name</fullName>
            </value>
            <value>
                <fullName>Last Name</fullName>
                <default>true</default>
                <label>Last Name</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Account Name</fullName>
            </value>
            <value>
                <fullName>Account ID</fullName>
            </value>
            <value>
                <fullName>Account Number</fullName>
            </value>
            <value>
                <fullName>Site</fullName>
            </value>
            <value>
                <fullName>Billing Street</fullName>
            </value>
            <value>
                <fullName>Billing City</fullName>
            </value>
            <value>
                <fullName>Billing State</fullName>
            </value>
            <value>
                <fullName>Billing Postal Code</fullName>
            </value>
            <value>
                <fullName>Billing Country</fullName>
            </value>
            <value>
                <fullName>Shipping Street</fullName>
            </value>
            <value>
                <fullName>Shipping City</fullName>
            </value>
            <value>
                <fullName>Shipping State</fullName>
            </value>
            <value>
                <fullName>Shipping Postal</fullName>
            </value>
            <value>
                <fullName>Shipping Country</fullName>
            </value>
            <value>
                <fullName>Street</fullName>
            </value>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Postal Code</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Mailing Street</fullName>
            </value>
            <value>
                <fullName>Mailing City</fullName>
            </value>
            <value>
                <fullName>Mailing State</fullName>
            </value>
            <value>
                <fullName>Mailing Postal</fullName>
            </value>
            <value>
                <fullName>Mailing Country</fullName>
            </value>
            <value>
                <fullName>Other Street</fullName>
            </value>
            <value>
                <fullName>Other City</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>